--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.4",
     "bcrypt": "^5.1.1",
     "firebase": "^10.12.5",
     "next": "14.0.3",
